add and style section

--- a/assets/prepros.config
+++ b/assets/prepros.config
@@ -67,7 +67,8 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts"
+          "*.ts",
+          "/swiper-bundle.min.js"
         ],
         "exceptions": []
       }
@@ -929,395 +930,9 @@
     },
     "files": [
       {
-        "file": "base.scss",
+        "file": "swiper-bundle.min.js",
         "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\base.css"
-        }
-      },
-      {
-        "file": "components/component-card-post.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-card-post.css"
-        }
-      },
-      {
-        "file": "components/component-card-products.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-card-products.css"
-        }
-      },
-      {
-        "file": "components/component-cart-notification.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-cart-notification.css"
-        }
-      },
-      {
-        "file": "components/component-footer.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-footer.css"
-        }
-      },
-      {
-        "file": "components/component-mega-menu.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-mega-menu.css"
-        }
-      },
-      {
-        "file": "components/component-mobile-menu.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-mobile-menu.css"
-        }
-      },
-      {
-        "file": "components/component-modal.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-modal.css"
-        }
-      },
-      {
-        "file": "components/component-pagination.scss",
-        "config": {
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-pagination.css"
-        }
-      },
-      {
-        "file": "components/component-search-modal.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-search-modal.css"
-        }
-      },
-      {
-        "file": "components/component-search-tabs.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-search-tabs.css"
-        }
-      },
-      {
-        "file": "pages/main-head.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-head.css"
-        }
-      },
-      {
-        "file": "pages/main-list-collections.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-list-collections.css"
-        }
-      },
-      {
-        "file": "pages/section-main-blog.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-blog.css"
-        }
-      },
-      {
-        "file": "pages/section-main-list-collections.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-list-collections.css"
-        }
-      },
-      {
-        "file": "sections/section-ajax-cart.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-ajax-cart.css"
-        }
-      },
-      {
-        "file": "sections/section-announcement-bar-default.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-announcement-bar-default.css"
-        }
-      },
-      {
-        "file": "sections/section-cookie-notice.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-cookie-notice.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-hero.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-hero.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-large-text.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-large-text.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-banners.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-banners.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-block-menu.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-block-menu.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-block.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-block.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-collage.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-collage.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-default.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-default.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-grid.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-grid.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-menu.scss",
-        "config": {
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-menu.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections.scss",
-        "config": {
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-image.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-image.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-multi-column.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-multi-column.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-posts.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-posts.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-products.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-products.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-text-image.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-text-image.css"
-        }
-      },
-      {
-        "file": "sections/section-footer.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-footer.css"
-        }
-      },
-      {
-        "file": "sections/section-header.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.css"
-        }
-      },
-      {
-        "file": "sections/section-newsletter-popup.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-newsletter-popup.css"
-        }
-      },
-      {
-        "file": "sections/section-rich-text.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-rich-text.css"
+          "customOutput": "swiper-bundle.min.js"
         }
       }
     ]
