add login and register page

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -975,7 +975,7 @@
         "file": "component-tabs.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-tabs.js"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-tabs.js"
         }
       },
       {
