--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -940,6 +940,17 @@
         }
       },
       {
+        "file": "components/component-account-tabs.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-account-tabs.css"
+        }
+      },
+      {
         "file": "components/component-card-post.scss",
         "config": {
           "tasks": {
@@ -981,6 +992,17 @@
             }
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-footer.css"
+        }
+      },
+      {
+        "file": "components/component-login.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-login.css"
         }
       },
       {
@@ -1086,6 +1108,17 @@
             }
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-blog.css"
+        }
+      },
+      {
+        "file": "pages/section-main-customer.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-customer.css"
         }
       },
       {
