add account, orders, address

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -77,7 +77,8 @@
           "/component-tabs.js",
           "/header-search.js",
           "/details-modal.js",
-          "/ajax-cart.js"
+          "/ajax-cart.js",
+          "/customer.js"
         ],
         "exceptions": []
       }
@@ -982,6 +983,13 @@
         "file": "cookie-notice.js",
         "config": {
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cookie-notice.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "customer.js",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\customer.js",
           "autoCompile": true
         }
       },
