add page search, add type post

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -78,7 +78,8 @@
           "/header-search.js",
           "/details-modal.js",
           "/ajax-cart.js",
-          "/customer.js"
+          "/customer.js",
+          "/main-search.js"
         ],
         "exceptions": []
       }
@@ -1042,6 +1043,18 @@
         "file": "main-blog.js",
         "config": {
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-blog.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "main-search.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-search.js",
           "autoCompile": true
         }
       },
