add form for serch

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -951,7 +951,7 @@
         "file": "ajax-cart.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\ajax-cart.js"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\ajax-cart.js"
         }
       },
       {
@@ -1069,11 +1069,6 @@
         "file": "section-header.js",
         "config": {
           "autoCompile": true,
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js"
         }
       }
