fix header searcjh

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1029,7 +1029,12 @@
         "file": "header-search.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\header-search.js"
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\header-search.js"
         }
       },
       {
