--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1014,6 +1014,18 @@
         }
       },
       {
+        "file": "facets.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\facets.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "global.js",
         "config": {
           "autoCompile": true,
@@ -1040,8 +1052,8 @@
       {
         "file": "helper-functions.js",
         "config": {
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\helper-functions.js",
-          "autoCompile": true
+          "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\helper-functions.js"
         }
       },
       {
@@ -1075,6 +1087,18 @@
         "config": {
           "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js"
+        }
+      },
+      {
+        "file": "show-more.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\show-more.js",
+          "autoCompile": true
         }
       }
     ]
