--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -984,6 +984,28 @@
         }
       },
       {
+        "file": "components/component-collection-hero.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-collection-hero.css"
+        }
+      },
+      {
+        "file": "components/component-facets.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-facets.css"
+        }
+      },
+      {
         "file": "components/component-footer.scss",
         "config": {
           "tasks": {
@@ -992,6 +1014,17 @@
             }
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-footer.css"
+        }
+      },
+      {
+        "file": "components/component-loading-overlay.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-loading-overlay.css"
         }
       },
       {
@@ -1067,6 +1100,17 @@
         }
       },
       {
+        "file": "components/component-show-more.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-show-more.css"
+        }
+      },
+      {
         "file": "pages/main-head.scss",
         "config": {
           "tasks": {
@@ -1100,6 +1144,17 @@
         }
       },
       {
+        "file": "pages/main-template-giftcard.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-template-giftcard.css"
+        }
+      },
+      {
         "file": "pages/section-main-blog-post.scss",
         "config": {
           "tasks": {
@@ -1119,6 +1174,17 @@
             }
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-blog.css"
+        }
+      },
+      {
+        "file": "pages/section-main-collection.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-collection.css"
         }
       },
       {
