add collection header

--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -951,6 +951,17 @@
         }
       },
       {
+        "file": "components/component-breadcrumbs.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-breadcrumbs.css"
+        }
+      },
+      {
         "file": "components/component-card-post.scss",
         "config": {
           "tasks": {
@@ -1108,6 +1119,17 @@
             }
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-show-more.css"
+        }
+      },
+      {
+        "file": "components/component-sub_collection.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-sub_collection.css"
         }
       },
       {
