add grid-list view

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1038,6 +1038,18 @@
         }
       },
       {
+        "file": "grid-list-view.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\grid-list-view.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "header-search.js",
         "config": {
           "autoCompile": true,
