add list style view, add load more

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1076,6 +1076,18 @@
         }
       },
       {
+        "file": "main-collection.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-collection.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "main-search.js",
         "config": {
           "tasks": {
