add notify form

--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1083,6 +1083,17 @@
         }
       },
       {
+        "file": "components/component-notify-form.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-notify-form.css"
+        }
+      },
+      {
         "file": "components/component-pagination.scss",
         "config": {
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-pagination.css"
