add notification of wishlist, add page wishlist

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1100,6 +1100,18 @@
         }
       },
       {
+        "file": "main-wishlist.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-wishlist.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "scroll-up.js",
         "config": {
           "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\scroll-up.js",
