--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1265,6 +1265,17 @@
         }
       },
       {
+        "file": "pages/section-main-wishlist.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-wishlist.css"
+        }
+      },
+      {
         "file": "sections/section-ajax-cart.scss",
         "config": {
           "tasks": {
