іstyle page wishlist, add global settings of card-product

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1088,6 +1088,13 @@
         }
       },
       {
+        "file": "main-compare.js",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-compare.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "main-search.js",
         "config": {
           "tasks": {
