add compare page

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1090,8 +1090,13 @@
       {
         "file": "main-compare.js",
         "config": {
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-compare.js",
-          "autoCompile": true
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          }
         }
       },
       {
