--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1155,6 +1155,17 @@
         }
       },
       {
+        "file": "components/component-swiper.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-swiper.css"
+        }
+      },
+      {
         "file": "pages/main-head.scss",
         "config": {
           "tasks": {
