--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1111,6 +1111,17 @@
         }
       },
       {
+        "file": "components/component-recently-viewed.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-recently-viewed.css"
+        }
+      },
+      {
         "file": "components/component-search-modal.scss",
         "config": {
           "tasks": {
