start cart page

--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1287,6 +1287,17 @@
         }
       },
       {
+        "file": "pages/section-main-product.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-product.css"
+        }
+      },
+      {
         "file": "pages/section-main-search.scss",
         "config": {
           "tasks": {
