--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1541,6 +1541,23 @@
         }
       },
       {
+        "file": "sections/section-product-recommendations.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-product-recommendations.css"
+        }
+      },
+      {
+        "file": "sections/section-recently-viewed.scss",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-recently-viewed.css"
+        }
+      },
+      {
         "file": "sections/section-rich-text.scss",
         "config": {
           "tasks": {
