add complentary section

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -943,8 +943,8 @@
       {
         "file": "accordion-element.js",
         "config": {
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\accordion-element.js",
-          "autoCompile": true
+          "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\accordion-element.js"
         }
       },
       {
