--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1541,6 +1541,12 @@
         }
       },
       {
+        "file": "sections/section-product-complementary.scss",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-product-complementary.css"
+        }
+      },
+      {
         "file": "sections/section-product-recommendations.scss",
         "config": {
           "tasks": {
