fix sticky script, fix add to combo

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1134,7 +1134,12 @@
         "file": "section-header.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js",
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          }
         }
       },
       {
