add pickup availability

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -79,7 +79,8 @@
           "/details-modal.js",
           "/ajax-cart.js",
           "/customer.js",
-          "/main-search.js"
+          "/main-search.js",
+          "/pickup-availability.js"
         ],
         "exceptions": []
       }
@@ -1121,6 +1122,18 @@
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-wishlist.js",
           "autoCompile": true
+        }
+      },
+      {
+        "file": "pickup-availability.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\pickup-availability.js"
         }
       },
       {
