--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -91,6 +91,7 @@
       "autoUpload": false,
       "reuseConnection": true,
       "connectionType": "ftp",
+      "exportHistory": true,
       "history": []
     },
     "packages": {
@@ -859,12 +860,12 @@
         "sourceMap": false,
         "tasks": [
           {
-            "task": "typescript",
+            "task": "copy",
             "enable": true
           },
           {
             "task": "babel",
-            "enable": false
+            "enable": true
           },
           {
             "task": "bundle-js",
