add head and main section

--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1255,6 +1255,17 @@
         }
       },
       {
+        "file": "pages/section-main-cart.scss",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-cart.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "pages/section-main-collection.scss",
         "config": {
           "tasks": {
